Testing/MatrixClassTests/invert/RunTime/Blockdiagonal/Debug/com_Blockdiagonal_refc.txt
g++ -O3 -DNDEBUG -std=c++11 -I.   -c -o Domain/Domain_initDomain.o Domain/Domain_initDomain.cpp
g++ -O3 -DNDEBUG -std=c++11 -I.   -c -o Global/Global_declarations.o Global/Global_declarations.cpp
g++ -O3 -DNDEBUG -std=c++11 -I.   -c -o Global/Global_initGlobals.o Global/Global_initGlobals.cpp
g++ -O3 -DNDEBUG -std=c++11 -I.   -c -o User/User_main.o User/User_main.cpp
User/User_main.cpp: In function ‘int main(int, char**)’:
User/User_main.cpp:7:2: error: ‘_runtimeInverseMatrix’ was not declared in this scope
  _runtimeInverseMatrix(t, "shape=blockdiagonal", "block=3", t_inverse);
  ^~~~~~~~~~~~~~~~~~~~~
User/User_main.cpp:11:2: error: ‘compare’ was not declared in this scope
  compare(t_inverse, t_solution, prec);
  ^~~~~~~
<builtin>: recipe for target 'User/User_main.o' failed
make: *** [User/User_main.o] Error 1
